--- a/public/index.html
+++ b/public/index.html
@@ -14,10 +14,10 @@
     <h2>Required links</h2>
     <ul>
         <li>
-            <a href="project/login.html">Project</a>
+            <a href="project/index.html">Project</a>
         </li>
         <li>
-            <a href="assignment/index.html">Assignment</a>
+            <a href="assignment/login.html">Assignment</a>
         </li>
         <li>
             <a href="test/index.html">Test MongoDB</a>
