--- a/public/assignment/login.html
+++ b/public/assignment/login.html
@@ -2,19 +2,24 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Title</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet"/>
     <link href="css/style.css" rel="stylesheet"/>
 </head>
 <body>
-    <div class="container">
+    <div class="container-fluid">
         <h1>Login</h1>
-        <input type="text"
+        <label for="username">Username</label>
+        <input id="username"
+               type="text"
                class="form-control"
-               placeholder="username"/>
-        <input type="password"
+               placeholder="eric_1"/>
+        <label for="password">Password</label>
+        <input id="password"
+               type="password"
                class="form-control"
-               placeholder="password"/>
+               placeholder="whgn9687piunvh"/>
         <a class="btn btn-primary btn-block"
            href="profile.html">Login</a>
         <a class="btn btn-success btn-block"
