--- a/public/assignment/user/login.html
+++ b/public/assignment/user/login.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Title</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet"/>
-    <link href="css/style.css" rel="stylesheet"/>
+    <link href="../css/style.css" rel="stylesheet"/>
 </head>
 <body>
     <div class="container-fluid">
@@ -21,7 +21,7 @@
                class="form-control"
                placeholder="whgn9687piunvh"/>
         <a class="btn btn-primary btn-block"
-           href="profile.html">Login</a>
+           href="../website/website-list.html">Login</a>
         <a class="btn btn-success btn-block"
            href="register.html">Register</a>
     </div>
