--- a/public/assignment/user/profile.html
+++ b/public/assignment/user/profile.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Title</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet"/>
-    <link href="css/style.css" rel="stylesheet"/>
+    <link href="../css/style.css" rel="stylesheet"/>
 </head>
 <body>
 
@@ -26,8 +26,7 @@
 </nav>
 
 
-    <div class="container">
-        <h1>Profile</h1>
+    <div class="container-fluid">
 
         <form>
             <div class="form-group">
@@ -49,7 +48,7 @@
         </form>
 
         <a class="btn btn-primary btn-block"
-           href="website-list.html">Websites</a>
+           href="../website/website-list.html">Websites</a>
         <a class="btn btn-danger  btn-block"
            href="login.html">Logout</a>
     </div>
