More May 17th Class Code
Added additional code from the May 17th class.

--- a/public/assignment/widget/widget-list.html
+++ b/public/assignment/widget/widget-list.html
@@ -28,7 +28,7 @@
 <div class="container-fluid">
     <div class="wd-widget">
         <div class="wd-widget-toolbar">
-            <span class="glyphicon glyphicon-cog"></span>
+            <a href="widget-heading-edit.html"><span class="glyphicon glyphicon-cog"></span></a>
             <span class="glyphicon glyphicon-align-justify"></span>
         </div>
         <h1>Gizmodo</h1>
@@ -42,7 +42,7 @@
     </div>
     <div class="wd-widget">
         <div class="wd-widget-toolbar">
-            <span class="glyphicon glyphicon-cog"></span>
+            <a href="widget-image-edit.html"><span class="glyphicon glyphicon-cog"></span></a>
             <span class="glyphicon glyphicon-align-justify"></span>
         </div>
         <img src="https://i.kinja-img.com/gawker-media/image/upload/s--JYQyMyfT--/c_scale,fl_progressive,q_80,w_800/hkvwpuiqdgtn4ntb2q7z.png"/>
