--- a/public/assignment/website/website-list.html
+++ b/public/assignment/website/website-list.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Title</title>
+    <title>Website List</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet"/>
     <link href="../css/style.css" rel="stylesheet"/>
 </head>
@@ -13,7 +13,7 @@
     <div class="container-fluid">
         <div class="navbar-header">
             <a class="navbar-brand" href="#">
-                Fixed Top
+                Website List
             </a>
             <p class="navbar-text pull-right">
                 <a href="#" class="navbar-link">
@@ -29,16 +29,16 @@
 <ul class="list-group">
     <li class="list-group-item active">
         <div class="row">
-            <div>Name</div>
-            <div>Created</div>
-            <div>Accessed</div>
+            <div class="col-lg-5">Name</div>
+            <div class="col-lg-3">Created</div>
+            <div class="col-lg-3">Accessed</div>
         </div>
     </li>
     <li class="list-group-item">
         <div class="row">
                 <div class="col-lg-5 col-md-8 col-xs-11"><a href="../page/page-list.html">Cras justo odio</a></div>
-                <div class="col">1/1/2017</div>
-                <div class="col">2/2/2017</div>
+                <div class="col-lg-3">1/1/2017</div>
+                <div class="col-lg-3">2/2/2017</div>
                 <div class="col-xs-1"><a href="website-edit.html"><span class="glyphicon glyphicon-cog pull-right"></span></a></div>
         </div>
 
@@ -51,29 +51,12 @@
 </div>
 
 <nav class="navbar navbar-default navbar-fixed-bottom">
-    <div class="container">
-        <div class="row navbar-text">
-            <div class="col-xs-3 text-center">
-                <a href="#">
-                    <span class="glyphicon glyphicon-ok"></span>
-                </a>
-            </div>
-            <div class="col-xs-3 text-center">
-                <a href="#">
-                    <span class="glyphicon glyphicon-plus"></span>
-                </a>
-            </div>
-            <div class="col-xs-3 text-center">
-                <a href="#">
-                    <span class="glyphicon glyphicon-star"></span>
-                </a>
-            </div>
-            <div class="col-xs-3 text-center">
-                <a href="#">
-                    <span class="glyphicon glyphicon-heart"></span>
-                </a>
-            </div>
-        </div>
+    <div class="container-fluid">
+        <p class="navbar-text pull-right">
+            <a href="#" class="navbar-link">
+                <span class="glyphicon glyphicon-user"></span>
+            </a>
+        </p>
     </div>
 </nav>
 
