--- a/public/assignment/user/register.html
+++ b/public/assignment/user/register.html
@@ -3,22 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Title</title>
+    <title>Register</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet"/>
     <link href="../css/style.css" rel="stylesheet"/>
 </head>
 <body>
-    <div class="container">
+    <div class="container-fluid">
         <h1>Register</h1>
-        <input type="text"
+        <label for="username">Username</label>
+        <input id="username"
+                type="text"
                class="form-control"
                placeholder="username"/>
-        <input type="password"
+        <label for="password">Password</label>
+        <input id="password"
+                type="password"
                class="form-control"
                placeholder="password"/>
-        <input type="password"
+        <label for="verify_password">Verify Password</label>
+        <input id="verify_password"
+                type="password"
                class="form-control"
-               placeholder="very password"/>
+               placeholder="verify password"/>
         <a class="btn btn-primary btn-block"
            href="profile.html">Register</a>
         <a class="btn btn-danger  btn-block"
