Edited Website Static Pages
Made sizing changes to the website static pages.

--- a/public/assignment/website/website-edit.html
+++ b/public/assignment/website/website-edit.html
@@ -37,7 +37,7 @@
                     placeholder="cnn"
                     value="Engadget">
             <label for="description">Description</label>
-            <textarea class="form-control" id="description" rows="5" placeholder="news site">Text news site
+            <textarea class="form-control" id="description" rows="5" placeholder="news site">Tech news site
             </textarea>
             <a href="website-list.html" class="btn btn-block btn-danger">Delete</a>
         </div>
