--- a/public/assignment/website/website-list.html
+++ b/public/assignment/website/website-list.html
@@ -16,7 +16,7 @@
                 Website List
             </a>
             <p class="navbar-text pull-right">
-                <a href="#" class="navbar-link">
+                <a href="website-new.html" class="navbar-link">
           <span class="glyphicon glyphicon-plus">
           </span>
                 </a>
@@ -29,24 +29,51 @@
 <ul class="list-group">
     <li class="list-group-item active">
         <div class="row">
-            <div class="col-lg-5">Name</div>
-            <div class="col-lg-3">Created</div>
-            <div class="col-lg-3">Accessed</div>
+            <div class="col-md-5 col-sm-8 col-xs-10">Name</div>
+            <div class="col-sm-3 hidden-xs">Created</div>
+            <div class="col-md-3 visible-lg visible-md">Accessed</div>
         </div>
     </li>
     <li class="list-group-item">
         <div class="row">
-                <div class="col-lg-5 col-md-8 col-xs-11"><a href="../page/page-list.html">Cras justo odio</a></div>
-                <div class="col-lg-3">1/1/2017</div>
-                <div class="col-lg-3">2/2/2017</div>
-                <div class="col-xs-1"><a href="website-edit.html"><span class="glyphicon glyphicon-cog pull-right"></span></a></div>
+            <div class="col-md-5 col-sm-8 col-xs-10"><a href="../page/page-list.html">Cras justo odio</a></div>
+            <div class="col-sm-3 hidden-xs">1/1/2017</div>
+            <div class="col-md-3 visible-lg visible-md">2/2/2017</div>
+            <div class="col-sm-1 col-xs-2 "><a href="website-edit.html"><span class="glyphicon glyphicon-cog pull-right"></span></a></div>
         </div>
-
     </li>
-    <li class="list-group-item">Dapibus ac facilisis in</li>
-    <li class="list-group-item">Morbi leo risus</li>
-    <li class="list-group-item">Porta ac consectetur ac</li>
-    <li class="list-group-item">Vestibulum at eros</li>
+    <li class="list-group-item">
+        <div class="row">
+            <div class="col-md-5 col-sm-8 col-xs-10"><a href="../page/page-list.html">Dapibus ac facilisis in</a></div>
+            <div class="col-sm-3 hidden-xs">2/2/2017</div>
+            <div class="col-md-3 visible-lg visible-md">3/3/2017</div>
+            <div class="col-sm-1 col-xs-2 "><a href="website-edit.html"><span class="glyphicon glyphicon-cog pull-right"></span></a></div>
+        </div>
+    </li>
+    <li class="list-group-item">
+        <div class="row">
+            <div class="col-md-5 col-sm-8 col-xs-10"><a href="../page/page-list.html">Morbi leo risus</a></div>
+            <div class="col-sm-3 hidden-xs">3/3/2017</div>
+            <div class="col-md-3 visible-lg visible-md">4/4/2017</div>
+            <div class="col-sm-1 col-xs-2 "><a href="website-edit.html"><span class="glyphicon glyphicon-cog pull-right"></span></a></div>
+        </div>
+    </li>
+    <li class="list-group-item">
+        <div class="row">
+            <div class="col-md-5 col-sm-8 col-xs-10"><a href="../page/page-list.html">Porta ac consectetur ac</a></div>
+            <div class="col-sm-3 hidden-xs">4/4/2017</div>
+            <div class="col-md-3 visible-lg visible-md">5/5/2017</div>
+            <div class="col-sm-1 col-xs-2 "><a href="website-edit.html"><span class="glyphicon glyphicon-cog pull-right"></span></a></div>
+        </div>
+    </li>
+    <li class="list-group-item">
+        <div class="row">
+            <div class="col-md-5 col-sm-8 col-xs-10"><a href="../page/page-list.html">Vestibulum at eros</a></div>
+            <div class="col-sm-3 hidden-xs">5/20/2017</div>
+            <div class="col-md-3 visible-lg visible-md">5/20/2017</div>
+            <div class="col-sm-1 col-xs-2 "><a href="website-edit.html"><span class="glyphicon glyphicon-cog pull-right"></span></a></div>
+        </div>
+    </li>
 </ul>
 </div>
 
