--- a/public/assignment/widget/widget-list.html
+++ b/public/assignment/widget/widget-list.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Title</title>
+    <title>Widget List</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet"/>
     <link href="../css/style.css" rel="stylesheet"/>
 </head>
@@ -13,12 +13,11 @@
     <div class="container-fluid">
         <div class="navbar-header">
             <a class="navbar-brand" href="#">
-                Fixed Top
+                Widgets
             </a>
             <p class="navbar-text pull-right">
-                <a href="#" class="navbar-link">
-          <span class="glyphicon glyphicon-plus">
-          </span>
+                <a href="widget-choose.html" class="navbar-link">
+                    <span class="glyphicon glyphicon-plus"></span>
                 </a>
             </p>
         </div>
@@ -35,25 +34,26 @@
     </div>
     <div class="wd-widget">
         <div class="wd-widget-toolbar">
-            <span class="glyphicon glyphicon-cog"></span>
+            <a href="widget-heading-edit.html"><span class="glyphicon glyphicon-cog"></span></a>
             <span class="glyphicon glyphicon-align-justify"></span>
         </div>
-        <h3>The First Trailer for Star Trek: Discovery Is Here to Boldly Go to Beautiful New Worlds</h3>
+        <h3>Vienna Game Developers Are Using The City's Coffeehouse Culture To Create A New Kind Of Arcade</h3>
     </div>
     <div class="wd-widget">
         <div class="wd-widget-toolbar">
             <a href="widget-image-edit.html"><span class="glyphicon glyphicon-cog"></span></a>
             <span class="glyphicon glyphicon-align-justify"></span>
         </div>
-        <img src="https://i.kinja-img.com/gawker-media/image/upload/s--JYQyMyfT--/c_scale,fl_progressive,q_80,w_800/hkvwpuiqdgtn4ntb2q7z.png"/>
+        <img src="https://i.kinja-img.com/gawker-media/image/upload/s--vkEy2BuQ--/c_scale,fl_progressive,q_80,w_800/mudtqtexy5bgiqoeyb1v.png"/>
     </div>
     <div class="wd-widget">
         <div class="wd-widget-toolbar">
-            <span class="glyphicon glyphicon-cog"></span>
+            <a href="widget-heading-edit.html"><span class="glyphicon glyphicon-cog"></span></a>
             <span class="glyphicon glyphicon-align-justify"></span>
         </div>
-        <p>Revealed at the network’s ongoing Upfronts presentation, the trailer marks the first footage from <em>Discovery</em> beyond the initial ship reveal <a href="http://io9.gizmodo.com/the-new-star-trek-tv-show-has-a-title-and-a-starship-d-1784191488" rel="nofollow">back at San Diego Comic Con last year</a>. Set before the events of the original series, <em>Discovery</em> follows the crew of the titular Federation starship, helmed by Captain Lorca (Jason Isaacs), from the perspective of its First Officer, Michael Burnham (Sonequa Martin Green). <br></p>
-        <p>As well as a better look at the ship, we’ve got glimpses of the new uniforms worn by a pre-Kirk Starfleet, a better look at the Discovery herself, and even a brief hint at the Klingons and even Spock’s father, Sarek. <em>Star Trek: Discovery</em>—which has also been announced as now having 15 episodes in its first season, up from 13, as well as an accompanying aftershow called <em>Talking Trek</em>—is expected to debut on CBS, followed by a digital airing on CBS All Access, this Fall.<br></p>
+        <p>The rise and fall of arcades have in large part shaped how we think about playing video games together in public places, but in their absence, young designers are finding new ways to bring social gaming out into the open.</p>
+        <p>Austrian for “playing together,” <a href="http://zamspielen.tumblr.com/" target="_blank" rel="noopener">zamSpielen</a> is a small crew of designers and programmers trying to take video games out of living rooms and stick them in more unusual contexts. The Viennese collective consists of creators from the indie studio <a href="http://brokenrul.es/" target="_blank" rel="noopener">Broken Rules</a> (makers of <em>Secrets of Rætikon</em> and several other small games), game developer <a href="http://subotron.com/" target="_blank" rel="noopener">Josef “Who” Wiesner</a>, and coding teacher Matthias Menrath who came together seven years ago in the hopes of giving the city’s games scene a more material presence.<br></p>
+        <p>“We want to bring people together via games,” Wiesner said in an email. “But always next to each other at the same spot cause that is the most interesting and complete form of being with each other we think.”</p>
     </div>
     <div class="wd-widget">
         <div class="wd-widget-toolbar">
@@ -64,36 +64,19 @@
     </div>
     <div class="wd-widget">
         <div class="wd-widget-toolbar">
-            <span class="glyphicon glyphicon-cog"></span>
+            <a href="widget-heading-edit.html"><span class="glyphicon glyphicon-cog"></span></a>
             <span class="glyphicon glyphicon-align-justify"></span>
         </div>
     </div>
 </div>
 
 <nav class="navbar navbar-default navbar-fixed-bottom">
-    <div class="container">
-        <div class="row navbar-text">
-            <div class="col-xs-3 text-center">
-                <a href="#">
-                    <span class="glyphicon glyphicon-ok"></span>
-                </a>
-            </div>
-            <div class="col-xs-3 text-center">
-                <a href="#">
-                    <span class="glyphicon glyphicon-plus"></span>
-                </a>
-            </div>
-            <div class="col-xs-3 text-center">
-                <a href="#">
-                    <span class="glyphicon glyphicon-star"></span>
-                </a>
-            </div>
-            <div class="col-xs-3 text-center">
-                <a href="#">
-                    <span class="glyphicon glyphicon-heart"></span>
-                </a>
-            </div>
-        </div>
+    <div class="container-fluid">
+        <p class="navbar-text pull-right">
+            <a href="../user/profile.html" class="navbar-link">
+                <span class="glyphicon glyphicon-user"></span>
+            </a>
+        </p>
     </div>
 </nav>
 
