--- a/public/assignment/website/website-list.html
+++ b/public/assignment/website/website-list.html
@@ -12,13 +12,15 @@
 <nav class="navbar navbar-default navbar-fixed-top">
     <div class="container-fluid">
         <div class="navbar-header">
+            <a class="navbar-brand" href="../user/profile.html">
+                <span class="glyphicon glyphicon glyphicon-menu-left"></span>
+            </a>
             <a class="navbar-brand" href="#">
-                Website List
+                Websites
             </a>
             <p class="navbar-text pull-right">
                 <a href="website-new.html" class="navbar-link">
-          <span class="glyphicon glyphicon-plus">
-          </span>
+                    <span class="glyphicon glyphicon-plus"></span>
                 </a>
             </p>
         </div>
@@ -30,14 +32,14 @@
     <li class="list-group-item active">
         <div class="row">
             <div class="col-md-5 col-sm-8 col-xs-10">Name</div>
-            <div class="col-sm-3 hidden-xs">Created</div>
+            <div class="col-sm-3 visible-sm visible-md visible-lg">Created</div>
             <div class="col-md-3 visible-lg visible-md">Accessed</div>
         </div>
     </li>
     <li class="list-group-item">
         <div class="row">
             <div class="col-md-5 col-sm-8 col-xs-10"><a href="../page/page-list.html">Cras justo odio</a></div>
-            <div class="col-sm-3 hidden-xs">1/1/2017</div>
+            <div class="col-sm-3 visible-sm visible-md visible-lg">1/1/2017</div>
             <div class="col-md-3 visible-lg visible-md">2/2/2017</div>
             <div class="col-sm-1 col-xs-2 "><a href="website-edit.html"><span class="glyphicon glyphicon-cog pull-right"></span></a></div>
         </div>
@@ -45,7 +47,7 @@
     <li class="list-group-item">
         <div class="row">
             <div class="col-md-5 col-sm-8 col-xs-10"><a href="../page/page-list.html">Dapibus ac facilisis in</a></div>
-            <div class="col-sm-3 hidden-xs">2/2/2017</div>
+            <div class="col-sm-3 visible-sm visible-md visible-lg">2/2/2017</div>
             <div class="col-md-3 visible-lg visible-md">3/3/2017</div>
             <div class="col-sm-1 col-xs-2 "><a href="website-edit.html"><span class="glyphicon glyphicon-cog pull-right"></span></a></div>
         </div>
@@ -53,7 +55,7 @@
     <li class="list-group-item">
         <div class="row">
             <div class="col-md-5 col-sm-8 col-xs-10"><a href="../page/page-list.html">Morbi leo risus</a></div>
-            <div class="col-sm-3 hidden-xs">3/3/2017</div>
+            <div class="col-sm-3 visible-sm visible-md visible-lg">3/3/2017</div>
             <div class="col-md-3 visible-lg visible-md">4/4/2017</div>
             <div class="col-sm-1 col-xs-2 "><a href="website-edit.html"><span class="glyphicon glyphicon-cog pull-right"></span></a></div>
         </div>
@@ -61,7 +63,7 @@
     <li class="list-group-item">
         <div class="row">
             <div class="col-md-5 col-sm-8 col-xs-10"><a href="../page/page-list.html">Porta ac consectetur ac</a></div>
-            <div class="col-sm-3 hidden-xs">4/4/2017</div>
+            <div class="col-sm-3 visible-sm visible-md visible-lg">4/4/2017</div>
             <div class="col-md-3 visible-lg visible-md">5/5/2017</div>
             <div class="col-sm-1 col-xs-2 "><a href="website-edit.html"><span class="glyphicon glyphicon-cog pull-right"></span></a></div>
         </div>
@@ -69,7 +71,7 @@
     <li class="list-group-item">
         <div class="row">
             <div class="col-md-5 col-sm-8 col-xs-10"><a href="../page/page-list.html">Vestibulum at eros</a></div>
-            <div class="col-sm-3 hidden-xs">5/20/2017</div>
+            <div class="col-sm-3 visible-sm visible-md visible-lg">5/20/2017</div>
             <div class="col-md-3 visible-lg visible-md">5/20/2017</div>
             <div class="col-sm-1 col-xs-2 "><a href="website-edit.html"><span class="glyphicon glyphicon-cog pull-right"></span></a></div>
         </div>
@@ -80,7 +82,7 @@
 <nav class="navbar navbar-default navbar-fixed-bottom">
     <div class="container-fluid">
         <p class="navbar-text pull-right">
-            <a href="#" class="navbar-link">
+            <a href="../user/profile.html" class="navbar-link">
                 <span class="glyphicon glyphicon-user"></span>
             </a>
         </p>
