Updated Widget List
Updated the links on the Widget List page and made the Youtube widget
resize dynamically.

--- a/public/assignment/widget/widget-list.html
+++ b/public/assignment/widget/widget-list.html
@@ -56,17 +56,14 @@
         <p>“We want to bring people together via games,” Wiesner said in an email. “But always next to each other at the same spot cause that is the most interesting and complete form of being with each other we think.”</p>
     </div>
     <div class="wd-widget">
-        <div class="wd-widget-toolbar">
-            <span class="glyphicon glyphicon-cog"></span>
-            <span class="glyphicon glyphicon-align-justify"></span>
+        <div class="youtube-dynamic">
+            <iframe src="https://www.youtube.com/embed/Fbfe3dH4LDs" frameborder="0" allowfullscreen></iframe>
+            <div class="wd-widget-toolbar">
+                <a href="widget-youtube-edit.html"><span class="glyphicon glyphicon-cog"></span></a>
+                <span class="glyphicon glyphicon-align-justify"></span>
+            </div>
         </div>
-        <iframe width="426" height="240" src="https://www.youtube.com/embed/Fbfe3dH4LDs" frameborder="0" allowfullscreen></iframe>
-    </div>
-    <div class="wd-widget">
-        <div class="wd-widget-toolbar">
-            <a href="widget-heading-edit.html"><span class="glyphicon glyphicon-cog"></span></a>
-            <span class="glyphicon glyphicon-align-justify"></span>
-        </div>
+
     </div>
 </div>
 
