--- a/public/assignment/widget/widget-list.html
+++ b/public/assignment/widget/widget-list.html
@@ -12,6 +12,9 @@
 <nav class="navbar navbar-default navbar-fixed-top">
     <div class="container-fluid">
         <div class="navbar-header">
+            <a class="navbar-brand" href="../page/page-list.html">
+                <span class="glyphicon glyphicon glyphicon-menu-left"></span>
+            </a>
             <a class="navbar-brand" href="#">
                 Widgets
             </a>
@@ -56,7 +59,7 @@
         <p>“We want to bring people together via games,” Wiesner said in an email. “But always next to each other at the same spot cause that is the most interesting and complete form of being with each other we think.”</p>
     </div>
     <div class="wd-widget">
-        <div class="youtube-dynamic">
+        <div class="wd-youtube-dynamic">
             <iframe src="https://www.youtube.com/embed/Fbfe3dH4LDs" frameborder="0" allowfullscreen></iframe>
             <div class="wd-widget-toolbar">
                 <a href="widget-youtube-edit.html"><span class="glyphicon glyphicon-cog"></span></a>
