--- a/public/assignment/website/website-edit.html
+++ b/public/assignment/website/website-edit.html
@@ -19,9 +19,9 @@
                 Edit Website
             </a>
             <p class="navbar-text pull-right">
-                <a href="website-new.html" class="navbar-link">
-          <span class="glyphicon glyphicon-plus">
-          </span>
+                <a href="#" class="navbar-link">
+                  <span class="glyphicon glyphicon-ok">
+                  </span>
                 </a>
             </p>
         </div>
