--- a/public/assignment/website/website-new.html
+++ b/public/assignment/website/website-new.html
@@ -20,7 +20,7 @@
             </a>
             <p class="navbar-text pull-right">
                 <a href="website-new.html" class="navbar-link">
-          <span class="glyphicon glyphicon-plus">
+          <span class="glyphicon glyphicon-ok">
           </span>
                 </a>
             </p>
