--- a/public/assignment/widget/widget-image-edit.html
+++ b/public/assignment/widget/widget-image-edit.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Title</title>
+    <title>Widget Edit: Image</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet"/>
     <link href="../css/style.css" rel="stylesheet"/>
 </head>
@@ -12,13 +12,13 @@
 <nav class="navbar navbar-default navbar-fixed-top">
     <div class="container-fluid">
         <div class="navbar-header">
-            <a class="navbar-brand" href="#">
-                Fixed Top
+            <a class="navbar-brand" href="widget-list.html">
+                <span class="glyphicon glyphicon glyphicon-menu-left"></span>
             </a>
+            <a class="navbar-brand" href="#">Edit Image</a>
             <p class="navbar-text pull-right">
-                <a href="website-new.html" class="navbar-link">
-          <span class="glyphicon glyphicon-plus">
-          </span>
+                <a href="widget-list.html" class="navbar-link">
+                    <span class="glyphicon glyphicon-ok"></span>
                 </a>
             </p>
         </div>
@@ -30,54 +30,30 @@
     <label for="name">Name</label>
     <input class="form-control"
            id="name"
-           placeholder="cnn"
-           value="top heading">
+           placeholder="Cat Picture"
+           value="Dog Picture">
     <label for="text">Text</label>
-    <textarea class="form-control" id="text" rows="5" placeholder="news site">U.S. Senate Reaches Compromise
-            </textarea>
-    <select class="form-control">
-        <option>1 (The Biggest)</option>
-        <option>1 (X-Large)</option>
-        <option>1 (Large)</option>
-        <option>1 (Medium)</option>
-        <option>1 (Small)</option>
-        <option>1 (X-Small)</option>
-    </select>
+    <textarea class="form-control" id="text" rows="5" placeholder="That's a funny cat picture!">Look at that dog!</textarea>
+    <label for="url">URL</label>
+    <input id="url" type="url" class="form-control" />
+    <label for="width">Width (1-100)</label>
+    <input id="width" type="number" class="form-control" min="1" max="100"/>
     <label for="file">Upload</label>
     <input id="file" type="file" class="form-control" />
-    <!-- Can add an image to place on top of file input button. Position absolute -->
+    <a href="#"
+       class="btn btn-block btn-primary">Upload Image</a>
     <a href="widget-list.html"
        class="btn btn-block btn-danger">Delete</a>
-
-    <a href="widget-list.html"
-       class="btn btn-block btn-success">Upload</a>
 
 </div>
 
 <nav class="navbar navbar-default navbar-fixed-bottom">
-    <div class="container">
-        <div class="row navbar-text">
-            <div class="col-xs-3 text-center">
-                <a href="#">
-                    <span class="glyphicon glyphicon-ok"></span>
-                </a>
-            </div>
-            <div class="col-xs-3 text-center">
-                <a href="#">
-                    <span class="glyphicon glyphicon-plus"></span>
-                </a>
-            </div>
-            <div class="col-xs-3 text-center">
-                <a href="#">
-                    <span class="glyphicon glyphicon-star"></span>
-                </a>
-            </div>
-            <div class="col-xs-3 text-center">
-                <a href="#">
-                    <span class="glyphicon glyphicon-heart"></span>
-                </a>
-            </div>
-        </div>
+    <div class="container-fluid">
+        <p class="navbar-text pull-right">
+            <a href="../user/profile.html" class="navbar-link">
+                <span class="glyphicon glyphicon-user"></span>
+            </a>
+        </p>
     </div>
 </nav>
 
