Added Default Values
Added default values for iages and Youtube clips.

--- a/public/assignment/widget/widget-image-edit.html
+++ b/public/assignment/widget/widget-image-edit.html
@@ -35,9 +35,13 @@
     <label for="text">Text</label>
     <textarea class="form-control" id="text" rows="5" placeholder="That's a funny cat picture!">Look at that dog!</textarea>
     <label for="url">URL</label>
-    <input id="url" type="url" class="form-control" />
+    <input id="url"
+           type="url"
+           class="form-control"
+           placeholder="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png"
+           value="https://upload.wikimedia.org/wikipedia/commons/1/18/Bartagame_fcm.jpg"/>
     <label for="width">Width (1-100)</label>
-    <input id="width" type="number" class="form-control" min="1" max="100"/>
+    <input id="width" type="number" class="form-control" min="1" max="100" placeholder="1" value="100"/>
     <label for="file">Upload</label>
     <input id="file" type="file" class="form-control" />
     <a href="#"
