--- a/public/assignment/widget/widget-youtube-edit.html
+++ b/public/assignment/widget/widget-youtube-edit.html
@@ -35,9 +35,13 @@
     <label for="text">Text</label>
     <textarea class="form-control" id="text" rows="5" placeholder="Look at that dog!">That's a funny cat video!</textarea>
     <label for="url">URL</label>
-    <input id="url" type="url" class="form-control" />
+    <input id="url"
+           type="url"
+           class="form-control"
+           placeholder="https://www.youtube.com/watch?v=6naWCw5LSPc"
+           value="https://www.youtube.com/watch?v=wduZHtRbSkY"/>
     <label for="width">Width (1-100)</label>
-    <input id="width" type="number" class="form-control" min="1" max="100"/>
+    <input id="width" type="number" class="form-control" min="1" max="100" placeholder="1" value="100"/>
     <a href="widget-list.html"
        class="btn btn-block btn-danger">Delete</a>
 
