--- a/public/assignment/index.html
+++ b/public/assignment/index.html
@@ -36,7 +36,7 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-                <li><a href="user/login.html">Login</a></li>
+                <li><a href="user/login.view.client.html">Login</a></li>
                 <li><a href="user/register.html">Register</a></li>
                 <li><a href="user/profile.html">Profile</a></li>
                 <li><a href="#logout">Logout</a></li>
@@ -51,7 +51,7 @@
     <div class="jumbotron">
         <h1>Assignment 2</h1>
         <p>This is my submission for Assignment 2. I have created static pages for users, websites, and widgets.</p>
-        <p><a href="user/login.html">Click here to login.</a></p>
+        <p><a href="user/login.view.client.html">Click here to login.</a></p>
     </div>
 
      <div class="page-header">
