--- a/public/assignment/user/login.view.client.html
+++ b/public/assignment/user/login.view.client.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" ng-app="WAM">
 <head>
+    <script src="../vendor/angular/angular.min.js"></script>
+    <script src="app.js"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
     <title>Login</title>
@@ -8,20 +10,26 @@
     <link href="../css/style.css" rel="stylesheet"/>
 </head>
 <body>
-    <div class="container-fluid">
+    <div ng-controller="loginController"
+         class="container-fluid">
         <h1>Login</h1>
+        <h3 ng-show="message" class="alert alert-info">{{message}}</h3>
         <label for="username">Username</label>
-        <input id="username"
+        <input ng-model="username"
+               id="username"
                type="text"
                class="form-control"
                placeholder="eric_1"/>
         <label for="password">Password</label>
-        <input id="password"
+        <input ng-model="password"
+                id="password"
                type="password"
                class="form-control"
                placeholder="whgn9687piunvh"/>
-        <a class="btn btn-primary btn-block"
-           href="../website/website-list.html">Login</a>
+        <a ng-click="login(username, password)"
+           class="btn btn-primary btn-block">
+            Login
+        </a>
         <a class="btn btn-success btn-block"
            href="register.html">Register</a>
     </div>
