--- a/public/assignment/home.html
+++ b/public/assignment/home.html
@@ -6,10 +6,10 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-                <li><a href="user/login.view.client.html">Login</a></li>
-                <li><a href="user/register.html">Register</a></li>
-                <li><a href="user/profile.html">Profile</a></li>
-                <li><a href="#logout">Logout</a></li>
+                <li><a href="#!/login">Login</a></li>
+                <li><a href="#!/register">Register</a></li>
+                <li><a href="#!/profile">Profile</a></li>
+                <li><a href="#!/logout">Logout</a></li>
             </ul>
         </div>
     </div>
@@ -21,7 +21,7 @@
     <div class="jumbotron">
         <h1>Assignment 2</h1>
         <p>This is my submission for Assignment 2. I have created static pages for users, websites, and widgets.</p>
-        <p><a href="user/login.view.client.html">Click here to login.</a></p>
+        <p><a href="#!/login">Click here to login.</a></p>
     </div>
 
     <div class="page-header">
