--- a/public/assignment/index.html
+++ b/public/assignment/index.html
@@ -5,7 +5,11 @@
     <script src="vendor/angular/angular.min.js"></script>
     <script src="vendor/angular/angular-route.min.js"></script>
     <script src="app.js"></script>
-    <script src="user/controllers/login.controller.view.js"></script>
+    <script src="config.js"></script>
+    <script src="views/user/controllers/login.controller.view.js"></script>
+    <script src="views/user/controllers/profile.controller.view.js"></script>
+    <script src="views/user/controllers/register.controller.view.js"></script>
+    <script src="services/user.service.client.js"></script>
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
