--- a/public/assignment/index.html
+++ b/public/assignment/index.html
@@ -6,10 +6,20 @@
     <script src="vendor/angular/angular-route.min.js"></script>
     <script src="app.js"></script>
     <script src="config.js"></script>
-    <script src="views/user/controllers/login.controller.view.js"></script>
-    <script src="views/user/controllers/profile.controller.view.js"></script>
-    <script src="views/user/controllers/register.controller.view.js"></script>
+
+    <!-- user -->
+    <script src="views/user/controllers/login.controller.client.js"></script>
+    <script src="views/user/controllers/profile.controller.client.js"></script>
+    <script src="views/user/controllers/register.controller.client.js"></script>
     <script src="services/user.service.client.js"></script>
+
+    <!-- website -->
+    <script src="views/website/controllers/website-list.controller.client.js"></script>
+    <script src="views/website/controllers/website-edit.controller.client.js"></script>
+    <script src="views/website/controllers/website-new.controller.client.js"></script>
+    <script src="services/website.service.client.js"></script>
+
+    <!-- widget -->
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
