--- a/public/assignment/index.html
+++ b/public/assignment/index.html
@@ -19,7 +19,17 @@
     <script src="views/website/controllers/website-new.controller.client.js"></script>
     <script src="services/website.service.client.js"></script>
 
+    <!-- page -->
+    <!--<script src="views/page/controllers/page-list.controller.client.js"></script>
+    <script src="views/page/controllers/page-edit.controller.client.js"></script>
+    <script src="views/page/controllers/page-new.controller.client.js"></script>
+    <script src="services/page.service.client.js"></script>-->
+
     <!-- widget -->
+    <script src="views/widget/controllers/widget-list.controller.client.js"></script>
+    <!--<script src="views/widget/controllers/widget-edit.controller.client.js"></script>
+    <script src="views/widget/controllers/widget-new.controller.client.js"></script>
+    <script src="services/widget.service.client.js"></script>-->
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
