--- a/public/assignment/index.html
+++ b/public/assignment/index.html
@@ -22,7 +22,7 @@
     <!-- page -->
     <script src="views/page/controllers/page-list.controller.client.js"></script>
     <script src="views/page/controllers/page-edit.controller.client.js"></script>
-    <!--<script src="views/page/controllers/page-new.controller.client.js"></script>-->
+    <script src="views/page/controllers/page-new.controller.client.js"></script>
     <script src="services/page.service.client.js"></script>
 
     <!-- widget -->
