--- a/public/assignment/home.html
+++ b/public/assignment/home.html
@@ -2,7 +2,7 @@
 <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container">
         <div class="navbar-header">
-            <a class="navbar-brand" href="#">Rolllins Assignment</a>
+            <a class="navbar-brand">Rolllins Assignment</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
