--- a/public/assignment/home.html
+++ b/public/assignment/home.html
@@ -19,8 +19,8 @@
 
     <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron">
-        <h1>Assignment 2</h1>
-        <p>This is my submission for Assignment 2. I have created static pages for users, websites, and widgets.</p>
+        <h1>Assignment 3</h1>
+        <p>This is my submission for Assignment 3. I have created dynamic pages for users, websites, and widgets.</p>
         <p><a href="#!/login">Click here to login.</a></p>
     </div>
 
@@ -31,5 +31,7 @@
     <p>This assignment served as a way of setting up a development environment for this course.</p>
     <h3>Assignment 2</h3>
     <p>This assignment served as a means of setting up static pages to map out the core functionality of this application.</p>
+    <h3>Assignment 3</h3>
+    <p>This assignment served as a means of setting up dynamic pages to map out the core functionality of this application.</p>
 
 </div> <!-- /container -->
