--- a/public/assignment/index.html
+++ b/public/assignment/index.html
@@ -8,27 +8,27 @@
     <script src="config.js"></script>
 
     <!-- user -->
-    <script src="views/user/controllers/login.controller.client.js"></script>
-    <script src="views/user/controllers/profile.controller.client.js"></script>
-    <script src="views/user/controllers/register.controller.client.js"></script>
+    <script src="views/user/controllers/login.controller.view.js"></script>
+    <script src="views/user/controllers/profile.controller.view.js"></script>
+    <script src="views/user/controllers/register.controller.view.js"></script>
     <script src="services/user.service.client.js"></script>
 
     <!-- website -->
-    <script src="views/website/controllers/website-list.controller.client.js"></script>
-    <script src="views/website/controllers/website-edit.controller.client.js"></script>
-    <script src="views/website/controllers/website-new.controller.client.js"></script>
+    <script src="views/website/controllers/website-list.controller.view.js"></script>
+    <script src="views/website/controllers/website-edit.controller.view.js"></script>
+    <script src="views/website/controllers/website-new.controller.view.js"></script>
     <script src="services/website.service.client.js"></script>
 
     <!-- page -->
-    <script src="views/page/controllers/page-list.controller.client.js"></script>
-    <script src="views/page/controllers/page-edit.controller.client.js"></script>
-    <script src="views/page/controllers/page-new.controller.client.js"></script>
+    <script src="views/page/controllers/page-list.controller.view.js"></script>
+    <script src="views/page/controllers/page-edit.controller.view.js"></script>
+    <script src="views/page/controllers/page-new.controller.view.js"></script>
     <script src="services/page.service.client.js"></script>
 
     <!-- widget -->
-    <script src="views/widget/controllers/widget-list.controller.client.js"></script>
-    <script src="views/widget/controllers/widget-edit.controller.client.js"></script>
-    <script src="views/widget/controllers/widget-new.controller.client.js"></script>
+    <script src="views/widget/controllers/widget-list.controller.view.js"></script>
+    <script src="views/widget/controllers/widget-edit.controller.view.js"></script>
+    <script src="views/widget/controllers/widget-new.controller.view.js"></script>
 
     <script src="services/widget.service.client.js"></script>
 
