--- a/public/assignment/index.html
+++ b/public/assignment/index.html
@@ -2,11 +2,15 @@
 <!DOCTYPE html>
 <html lang="en" ng-app="WAM">
 <head>
+
+    <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+
     <script src="vendor/angular/angular.min.js"></script>
     <script src="vendor/angular/angular-route.min.js"></script>
     <script src="app.js"></script>
     <script src="config.js"></script>
-
+    <script src="directives/wbdv-sortable.js"></script>
     <!-- user -->
     <script src="views/user/controllers/login.controller.view.js"></script>
     <script src="views/user/controllers/profile.controller.view.js"></script>
@@ -33,6 +37,8 @@
     <script src="services/widget.service.client.js"></script>
     <script src="services/flickr.service.client.js"></script>
 
+
+
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -57,12 +63,6 @@
 </div>
 
 
-<!-- Bootstrap core JavaScript
-================================================== -->
-<!-- Placed at the end of the document so the pages load faster -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-<script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
-<script src="vendor/bootstrap/dist/js/bootstrap.min.js"></script>
-<!--<script src="../../assets/js/docs.min.js"></script>-->
+
 </body>
 </html>
