--- a/public/assignment/home.html
+++ b/public/assignment/home.html
@@ -19,8 +19,8 @@
 
     <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron">
-        <h1>Assignment 3</h1>
-        <p>This is my submission for Assignment 3. I have created dynamic pages for users, websites, and widgets.</p>
+        <h1>Assignment 4</h1>
+        <p>This is my submission for Assignment 4. I have created ser side services.</p>
         <p><a href="#!/login">Click here to login.</a></p>
     </div>
 
