--- a/public/assignment/home.html
+++ b/public/assignment/home.html
@@ -20,7 +20,7 @@
     <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron">
         <h1>Assignment 4</h1>
-        <p>This is my submission for Assignment 4. I have created ser side services.</p>
+        <p>This is my submission for Assignment 4. I have created server side services.</p>
         <p><a href="#!/login">Click here to login.</a></p>
     </div>
 
