--- a/public/project/home.html
+++ b/public/project/home.html
@@ -9,7 +9,7 @@
                 <li><a href="#!/login">Login</a></li>
                 <li><a href="#!/register">Register</a></li>
                 <li><a href="#!/profile">Profile</a></li>
-                <li><a href="#!/tests">Tests</a></li>
+                <li><a href="#!/experiment">Tests</a></li>
                 <li><a href="#!/logout">Logout</a></li>
             </ul>
         </div>
