Added Text and HTML Widgets
Added Text and HTML Widgets

--- a/public/assignment/index.html
+++ b/public/assignment/index.html
@@ -11,6 +11,13 @@
     <script src="app.js"></script>
     <script src="config.js"></script>
     <script src="directives/wbdv-sortable.js"></script>
+    <script src="directives/text-angular.js"></script>
+
+    <!-- Text Angular -->
+    <script src="vendor/textAngular/js/textAngular-rangy.min.js"></script>
+    <script src="vendor/textAngular/js/textAngular-sanitize.min.js"></script>
+    <script src="vendor/textAngular/js/textAngular.min.js"></script>
+
     <!-- user -->
     <script src="views/user/controllers/login.controller.view.js"></script>
     <script src="views/user/controllers/profile.controller.view.js"></script>
@@ -54,6 +61,10 @@
     <!-- Bootstrap theme -->
     <link href="vendor/bootstrap/dist/css/bootstrap-theme.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
+
+    <!-- Text Angular Theme -->
+    <link href="vendor/textAngular/css/textAngular.css" rel="stylesheet">
+
 </head>
 
 <body>
