--- a/public/assignment/home.html
+++ b/public/assignment/home.html
@@ -19,8 +19,8 @@
 
     <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron">
-        <h1>Assignment 4</h1>
-        <p>This is my submission for Assignment 4. I have created server side services.</p>
+        <h1>Assignment 5</h1>
+        <p>This is my submission for Assignment 5. I have created database services.</p>
         <p><a href="#!/login">Click here to login.</a></p>
     </div>
 
@@ -33,5 +33,7 @@
     <p>This assignment served as a means of setting up static pages to map out the core functionality of this application.</p>
     <h3>Assignment 3</h3>
     <p>This assignment served as a means of setting up dynamic pages to map out the core functionality of this application.</p>
+    <h3>Assignment 4</h3>
+    <p>This is my submission for Assignment 4. I have created server side services.</p>
 
 </div> <!-- /container -->
