--- a/public/project/index.html
+++ b/public/project/index.html
@@ -13,8 +13,9 @@
 
     <!-- user -->
     <script src="views/user/controllers/login.controller.view.js"></script>
-    <!--<script src="views/user/controllers/profile.controller.view.js"></script>-->
-    <!--<script src="views/user/controllers/register.controller.view.js"></script>-->
+    <script src="views/user/controllers/profile.controller.view.js"></script>
+    <script src="views/user/controllers/register.controller.view.js"></script>
+    <script src="views/user/controllers/user-list.controller.view.js"></script>
     <script src="services/user.service.client.js"></script>
 
     <!-- widget -->
