Finished adding friend support
Finished adding friend support

--- a/public/project/index.html
+++ b/public/project/index.html
@@ -14,9 +14,12 @@
     <!-- user -->
     <script src="views/user/controllers/login.controller.view.js"></script>
     <script src="views/user/controllers/profile.controller.view.js"></script>
+    <script src="views/user/controllers/friend-profile.controller.view.js"></script>
     <script src="views/user/controllers/register.controller.view.js"></script>
     <script src="views/user/controllers/user-list.controller.view.js"></script>
     <script src="services/user.service.client.js"></script>
+
+
 
     <!-- widget -->
     <script src="views/content/controllers/course-search.controller.client.js"></script>
