--- a/public/project/index.html
+++ b/public/project/index.html
@@ -21,10 +21,9 @@
 
 
 
-    <!-- widget -->
     <script src="views/content/controllers/course-search.controller.client.js"></script>
     <script src="views/content/templates/course-search.view.client.html"></script>
-    <script src="services/content.service.client.js"></script>
+    <!-- <script src="services/content.service.client.js"></script> -->
     <script src="services/open-education.service.client.js"></script>
 
     <meta charset="utf-8">
