--- a/public/assignment/index.html
+++ b/public/assignment/index.html
@@ -18,6 +18,8 @@
     <script src="vendor/textAngular/js/textAngular-sanitize.min.js"></script>
     <script src="vendor/textAngular/js/textAngular.min.js"></script>
 
+    <script src="views/home/controllers/main.controller.client.js"></script>
+
     <!-- user -->
     <script src="views/user/controllers/login.controller.view.js"></script>
     <script src="views/user/controllers/profile.controller.view.js"></script>
