--- a/public/assignment/index.html
+++ b/public/assignment/index.html
@@ -44,7 +44,11 @@
     <script src="services/widget.service.client.js"></script>
     <script src="services/flickr.service.client.js"></script>
 
+    <!-- home -->
     <script src="views/home/controllers/main.controller.client.js"></script>
+
+    <!-- admin -->
+    <script src="views/admin/controllers/admin-users.controller.client.js"></script>
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
