Preliminary Facebook Login
Preliminary Facebook Login

--- a/public/assignment/index.html
+++ b/public/assignment/index.html
@@ -69,6 +69,8 @@
     <!-- Text Angular Theme -->
     <link href="vendor/textAngular/css/textAngular.css" rel="stylesheet">
 
+    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
+
 </head>
 
 <body>
