Added Basics of User Cookie
Added Basics of User Cookie

--- a/public/project/index.html
+++ b/public/project/index.html
@@ -26,6 +26,8 @@
     <!-- <script src="services/content.service.client.js"></script> -->
     <script src="services/open-education.service.client.js"></script>
 
+    <script src="views/curriculum/controllers/curriculum-new.controller.view.js"></script>
+
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
