Fixed Course Addition
Evidently MD5s are too large to be ObjectIds

--- a/public/project/index.html
+++ b/public/project/index.html
@@ -24,7 +24,7 @@
     <script src="views/content/controllers/course-search.controller.client.js"></script>
     <script src="views/content/templates/course-search.view.client.html"></script>
     <!-- <script src="services/content.service.client.js"></script> -->
-    <script src="services/open-education.service.client.js"></script>
+    <script src="services/course.service.client.js"></script>
 
     <script src="views/curriculum/controllers/curriculum-new.controller.view.js"></script>
 
@@ -34,7 +34,6 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="../../favicon.ico">
 
     <title>Theme Template for Bootstrap</title>
 
