Added Content to Profile
Added Content to Profile

--- a/public/project/index.html
+++ b/public/project/index.html
@@ -23,7 +23,7 @@
 
     <script src="views/content/controllers/course-search.controller.client.js"></script>
     <script src="views/content/templates/course-search.view.client.html"></script>
-    <!-- <script src="services/content.service.client.js"></script> -->
+    <script src="services/content.service.client.js"></script>
     <script src="services/course.service.client.js"></script>
 
     <script src="views/curriculum/controllers/curriculum-new.controller.view.js"></script>
