--- a/public/project/index.html
+++ b/public/project/index.html
@@ -27,6 +27,7 @@
     <script src="services/course.service.client.js"></script>
 
     <script src="views/curriculum/controllers/curriculum-new.controller.view.js"></script>
+    <script src="views/curriculum/controllers/curriculum-edit.controller.view.js"></script>
     <script src="services/curriculum.service.client.js"></script>
 
     <meta charset="utf-8">
