--- a/public/project/index.html
+++ b/public/project/index.html
@@ -15,13 +15,16 @@
     <script src="views/user/controllers/login.controller.view.js"></script>
     <script src="views/user/controllers/profile.controller.view.js"></script>
     <script src="views/user/controllers/other-profile.controller.view.js"></script>
+    <script src="views/user/controllers/guest-profile.controller.view.js"></script>
     <script src="views/user/controllers/register.controller.view.js"></script>
     <script src="views/user/controllers/user-list.controller.view.js"></script>
+    <script src="views/user/controllers/guest-user-list.controller.view.js"></script>
     <script src="services/user.service.client.js"></script>
 
 
 
     <script src="views/content/controllers/course-search.controller.client.js"></script>
+    <script src="views/content/controllers/guest-course-search.controller.client.js"></script>
     <script src="views/content/templates/course-search.view.client.html"></script>
     <script src="services/content.service.client.js"></script>
     <script src="services/course.service.client.js"></script>
@@ -29,7 +32,10 @@
     <script src="views/curriculum/controllers/curriculum-new.controller.view.js"></script>
     <script src="views/curriculum/controllers/curriculum-edit.controller.view.js"></script>
     <script src="views/curriculum/controllers/curriculum-search.controller.view.js"></script>
+    <script src="views/curriculum/controllers/guest-curriculum-search.controller.view.js"></script>
     <script src="services/curriculum.service.client.js"></script>
+
+
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
