--- a/public/project/index.html
+++ b/public/project/index.html
@@ -51,6 +51,7 @@
     <!-- Bootstrap theme -->
     <link href="vendor/bootstrap/dist/css/bootstrap-theme.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
+    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
 </head>
 
 <body>
