--- a/public/project/home.html
+++ b/public/project/home.html
@@ -124,7 +124,8 @@
             </div>
             <div class="col-lg-4 col-lg-offset-2 text-center">
                 <a href="https://github.com/evrii/rollins-eric-webdev">
-                    <i class="fa fa-github fa-3x sr-contact"></i>
+                    <i class="fa fa-github fa-3x sr-contact">
+                    </i>
                     <p>Project Github</p>
                 </a>
             </div>
