Fixed Home Page
Fixed Home Page

--- a/public/project/home.html
+++ b/public/project/home.html
@@ -67,6 +67,17 @@
     <!-- /.container-fluid -->
 </nav>
 
+<header>
+    <div class="header-content">
+        <div class="header-content-inner">
+            <h1 id="homeHeading">Make the Most of What the Web has to Teach You</h1>
+            <hr>
+            <p id="subTitle">With access to all the courses currently currently tracked by the OpenCourseWare Consortium, we have access to the knowledge that you need!</p>
+            <a href="index.html" class="btn btn-primary btn-xl page-scroll">Login</a>
+        </div>
+    </div>
+</header>
+
 <section class="bg-primary" id="about">
     <div class="container">
         <div class="row">
